# photorec-refinery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
resources/: README.md
src/photorec_refinery/: __main__.py  app_state.py  console_ui.py  controller.py  file_utils.py  gui.py  gui_utils.py  photorec_cleaner.py  photorec_refinery.py
tests/: test_file_utils.py  test_photorec_refinery.py
