[project]
name = "photorec-refinery"
version = "1.0.1"
description = "A tool to clean and organize PhotoRec output directories."
requires-python = ">=3.13"
dependencies = [
    "toga>=0.5.3",
]
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
photorec-refinery-gui = "photorec_refinery.gui:main"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
  "E",        
  "F",        
  "W",        
  "I",        
  "UP",       
  "C4",       
  "FA",       
  "ISC",      
  "ICN"
]

extend-select = [
    "F",        
    "W",        
    "E",        
    "I",        
    "UP",       
    "C4",       
    "FA",       
    "ISC",      
    "ICN",      
    "RET",      
    "SIM",     
    "TID",      
    "TC",      
    "PTH",      
    "TD",      
  "NPY"      
]

ignore = [
    "B011",
    "E501",
    "TD003",
    "RET504",
]

[tool.basedpyright]
include = ["src/photorec_refinery"]
# Excluding pandas false errors
exclude = [
    "**/__pycache__",
]

# "off" | "basic" | "standard" | "strict"
typeCheckingMode = "basic"  

reportGeneralTypeIssues = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportOptionalCall = "error"

reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportUnusedVariable = false

reportUnusedImport = "warning"
reportUnusedFunction = "none"
reportPrivateUsage = "none"

[dependency-groups]
dev = [
    "briefcase>=0.3.26",
    "ruff>=0.14.11",
]

[tool.briefcase]
project_name = "PhotoRec Refinery"
bundle = "com.photorec-refinery"
version = "1.0.1"
url = "https://github.com/WarpedWing/photorec-refinery"
author = "WarpedWing Labs"
author_email = "noel@warpedwinglabs.com"

[tool.briefcase.app.photorec-refinery]
formal_name = "PhotoRec Refinery"
description = "A tool to clean and organize PhotoRec output directories"
long_description = """A GUI application to intelligently organize files recovered by PhotoRec.
It actively monitors the PhotoRec output directory and deletes unwanted file types from
completed recup_dir.X folders in real-time."""
icon = "src/photorec_refinery/resources/photorec-refinery"
sources = ["src/photorec_refinery"]
test_sources = ["tests"]

# Entry point for the GUI application
startup_module = "photorec_refinery.gui"

requires = [
    "toga>=0.5.3",
]

[tool.briefcase.app.photorec-refinery.macOS]
requires = [
    "toga-cocoa>=0.5.3",
]

[tool.briefcase.app.photorec-refinery.linux]
requires = [
    "toga-gtk>=0.5.3",
]

[tool.briefcase.app.photorec-refinery.windows]
requires = [
    # WinForms 0.5.x; ensure pythonnet present for CLR hosting
    "toga-winforms>=0.5.3",
    "pythonnet>=3.0.5",
]
system_installer = true
